# Faster_Grad_Cam_Package

./: .pre-commit-config.yaml  Dockerfile  PKG-INFO  README.md  pyproject.toml  setup.py
.github/: CI.yml
.github/workflows/: CI.yml  test_CI.yml  test_CI_2.yml
faster_grad_cam/: __init__.py  demo.py  grad_cam.py  home.py
faster_grad_cam/01_float32/: 00_image_to_npy.py  01_weight_quantization.py  02_integer_quantization.py
faster_grad_cam/02_weight_quantization/: download.sh  weights_weight_quant.tflite
faster_grad_cam/03_integer_quantization/: download.sh
faster_grad_cam/model/: download.sh  weights_integer_quant.tflite
tests/: test.py
